# kagome-from-external-project-test

./: .gitignore  .gitmodules  CMakeLists.txt  build_and_install_kagome.sh
cmake/Hunter/: config.cmake
src/: main.cpp
